2006-05-02  Senganal T  <tsenganal@novell.com>

	* Parser.jay : fix the rule for IsNull. Fixes bug #78254
	* Functions.cs : 
		- IsNullFunction.Eval : If expr evaluates to null or DBNull.Value, return the
		default expression value.

2006-03-27	Boris Kirzner <borisk@mainsoft.com>
	* Aggregation.cs: fix possible NullReferenceException.

2006-02-03  Senganal T  <tsenganal@novell.com>
	
	* ColumnReference.cs : 
		- GetReferencedRow () 
		- GetReferencedRows() : Verify the column before getting the values.
		 	Validate the ColumnReference even when the table has no rows.
	* Function.cs : Modified Eval()
		- A tmp fix to check for null. Expression.Eval needs to be modified all
		around to return DBNull.Value.

2006-01-18 Boris Kirzner <borisk@mainsoft.com>
	* ColumnReference.cs: added column and relation lazy evaluation 
	and caching.

2006-01-09 Senganal T <tsenganal@novell.com>
	* Aggregation.cs
	* Expression.cs
		- resolving a name clash in IExpression 

2006-01-06 Senganal T <tsenganal@novell.com>

	* Aggregation.cs
		- a correction to the previous check-in

2006-01-06 Senganal T <tsenganal@novell.com>

	* Aggregation.cs
		- Modified the cache to listen for RowChangedEvents.
	* Expression.cs
	* IExpression.cs
		- Added a Reset Method to cleanup when a Datacolumn is removed
		from a table.
	* Parser.jay
		- Modified to check :
		1.Aggregate Functions : Only for columns returning multiple values (child/local)
		2.Other Numeric/Functions : Only for columns that return single value (parent/local)

2005-12-20 Senganal T <tsenganal@novell.com>

	* Aggregation.cs :
		Modified the Eval and CalculateStatisticalFunction to add boundary checks.
		Fixes #77025.

2005-11-30 Konstantin Triger <kostat@mainsoft.com>

	* Parser.jay: use Convert.ToInt32() instead of cast to throw OverflowException.

2005-10-26 Konstantin Triger <kostat@mainsoft.com>

	* In.cs: Fix the enumerator initialization problem.

2005-10-21 Senganal T <tsenganal@novell.com>

	* Numeric.cs :