@@ -1,3 +1,8 @@
+2006-06-09 Juraj Skripsky <js@hotfeet.ch>
+
+	* DataTableTest.cs (SelectEscaping): Add tests for calling Select()
+	with escaped string literals.
+
 2006-03-12	Boris Kirzner <borisk@mainsfot.com>
 	* System.Data.Test.sln, System.Data.Test.vmwcsproj: 
 	changes for automated testing for TARGET_JVM.
