@@ -1,3 +1,8 @@
+2006-06-09  Juraj Skripsky <js@hotfeet.ch>
+
+	* Tokenizer.cs (ProcessEscapes): Inspect the next character, not the one
+	after that.
+
 2006-05-02  Senganal T  <tsenganal@novell.com>
 
 	* Parser.jay : fix the rule for IsNull. Fixes bug #78254
